fixed issue with footer being too wide

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,10 +10,10 @@ footer::before {
     content: '';
     position: absolute;
     display: block;
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
     height: 2px;
-    left: 50%;
-    margin-left: -250px;
+    left: 0;
     background: linear-gradient(to right,rgba(158,161,168,0) 0,#003568 50%,rgba(158,161,168,0) 100%)
 }
 
